--- a/conf/application.conf
+++ b/conf/application.conf
@@ -36,7 +36,7 @@ application.langs="en"
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost/addressbook?characterEncoding=UTF8"
 db.default.user=root
-db.default.password=endoendo
+db.default.password=campaigndriver
 
 # Evolutions
 # ~~~~~
