modify thread num

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -58,5 +58,18 @@ logger.play=INFO
 logger.application=DEBUG
 
 # Thread number
-play.pool=2
+play {
+  akka {
+    akka.loggers = ["akka.event.Logging$DefaultLogger", "akka.event.slf4j.Slf4jLogger"]
+    loglevel = WARNING
+    actor {
+      default-dispatcher = {
+        fork-join-executor {
+          parallelism-factor = 2.0
+          parallelism-max = 2
+        }
+      }
+    }
+  }
+}
 
