modfy db connection

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,8 +34,8 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost/addressbook?characterEncoding=UTF8"
-db.default.user=root
+db.default.url="jdbc:mysql://10.255.32.37/addressbook?characterEncoding=UTF8"
+db.default.user=campaigndriver
 db.default.password=campaigndriver
 
 # Evolutions
@@ -57,19 +57,31 @@ logger.play=INFO
 # Logger provided to your application:
 logger.application=DEBUG
 
+# http://doc.akka.io/docs/akka/2.2.0/general/configuration.html#Listing_of_the_Reference_Configuration
 # Thread number
-play {
-  akka {
-    akka.loggers = ["akka.event.Logging$DefaultLogger", "akka.event.slf4j.Slf4jLogger"]
-    loglevel = WARNING
-    actor {
-      default-dispatcher = {
-        fork-join-executor {
-          parallelism-factor = 2.0
-          parallelism-max = 2
-        }
-      }
-    }
-  }
-}
+internal-threadpool-size=2 
 
+play {
+    akka {
+        loglevel = WARNING
+        actor {
+          default-dispatcher = {
+            fork-join-executor {
+              parallelism-min= 2
+              parallelism-factor = 2.0
+              parallelism-max = 2
+            }
+          }
+          # This will be used if you have set "executor = "thread-pool-executor""
+          thread-pool-executor {
+            # Min number of threads to cap factor-based core number to
+            core-pool-size-min = 2
+            core-pool-size-factor = 2.0
+            core-pool-size-max = 2 
+            max-pool-size-min = 2
+            max-pool-size-factor  = 2.0
+            max-pool-size-max = 2
+          }
+        }
+    }
+}
