--- a/conf/application.conf
+++ b/conf/application.conf
@@ -34,9 +34,9 @@ application.langs="en"
 # By convention, the default datasource is named `default`
 #
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://10.255.32.37/addressbook?characterEncoding=UTF8"
-db.default.user=campaigndriver
-db.default.password=campaigndriver
+db.default.url="jdbc:mysql://127.0.0.1:3306/addressbook?characterEncoding=UTF8"
+db.default.user=root
+db.default.password=''
 
 # Evolutions
 # ~~~~~
